// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardChartTooltip Component should render a basic component: basic 1`] = `
<graphcardcharttooltip
  props="{
  "datum": {},
  "children": []
}"
>
  <div
    class="curiosity-usage-graph__tooltip"
  >
    <table
      summary="t(curiosity-graph.tooltipSummary)"
    />
    t(curiosity-graph.label_noData, {"context":"error"})
  </div>
</graphcardcharttooltip>
`;

exports[`GraphCardChartTooltip Component should render basic data: data 1`] = `
<graphcardcharttooltip
  props="{
  "datum": {
    "itemsByKey": {
      "loremIpsum": {
        "color": "#ffffff",
        "data": {
          "date": "2019-06-01T00:00:00Z",
          "hasData": true,
          "hasInfinite": false,
          "y": 0
        }
      },
      "dolorSit": {
        "data": {
          "date": "2019-06-01T00:00:00Z",
          "hasData": true,
          "hasInfinite": false,
          "y": 1
        }
      }
    }
  },
  "children": []
}"
>
  <div
    class="curiosity-usage-graph__tooltip"
  >
    <table
      summary="t(curiosity-graph.tooltipSummary)"
    >
      <thead>
        <tr>
          <th
            colspan="2"
          >
            June 1
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>
            <span
              class="curiosity-chartarea__icon curiosity-chartarea__icon-square"
            >
              <svg
                aria-hidden="true"
                fill="transparent"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48z"
                />
              </svg>
            </span>
             
            t(curiosity-graph.label, {"context":"dolorSit"})
          </th>
          <td>
            1
          </td>
        </tr>
        <tr>
          <th>
            <span
              class="curiosity-chartarea__icon curiosity-chartarea__icon-square"
            >
              <svg
                aria-hidden="true"
                fill="#ffffff"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48z"
                />
              </svg>
            </span>
             
            t(curiosity-graph.label, {"context":"loremIpsum"})
          </th>
          <td>
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</graphcardcharttooltip>
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: data display > 0 and NOT hasData on report 1`] = `
{
  "daily": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
  "monthly": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
  "quarterly": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
  "weekly": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: data display > 0 and UNDEFINED hasData on report 1`] = `
{
  "daily": <td>
    50
  </td>,
  "monthly": <td>
    50
  </td>,
  "quarterly": <td>
    50
  </td>,
  "weekly": <td>
    50
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: data display > 0 and hasData on report 1`] = `
{
  "daily": <td>
    50
  </td>,
  "monthly": <td>
    50
  </td>,
  "quarterly": <td>
    50
  </td>,
  "weekly": <td>
    50
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: data display for null and NOT hasData on report 1`] = `
{
  "daily": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
  "monthly": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
  "quarterly": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
  "weekly": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: data display for null and UNDEFINED hasData on report 1`] = `
{
  "daily": <td>
    0
  </td>,
  "monthly": <td>
    0
  </td>,
  "quarterly": <td>
    0
  </td>,
  "weekly": <td>
    0
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: data display for null and hasData on report 1`] = `
{
  "daily": <td>
    0
  </td>,
  "monthly": <td>
    0
  </td>,
  "quarterly": <td>
    0
  </td>,
  "weekly": <td>
    0
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: data display for zero and NOT hasData on report 1`] = `
{
  "daily": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
  "monthly": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
  "quarterly": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
  "weekly": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: data display for zero and UNDEFINED hasData on report 1`] = `
{
  "daily": <td>
    0
  </td>,
  "monthly": <td>
    0
  </td>,
  "quarterly": <td>
    0
  </td>,
  "weekly": <td>
    0
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: data display for zero and hasData on report 1`] = `
{
  "daily": <td>
    0
  </td>,
  "monthly": <td>
    0
  </td>,
  "quarterly": <td>
    0
  </td>,
  "weekly": <td>
    0
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: no data granularity data display 1`] = `
{
  "daily": null,
  "monthly": null,
  "quarterly": null,
  "weekly": null,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: threshold display for > 0 and NOT hasInfinite on threshold 1`] = `
{
  "daily": <td>
    100
  </td>,
  "monthly": <td>
    100
  </td>,
  "quarterly": <td>
    100
  </td>,
  "weekly": <td>
    100
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: threshold display for > 0 and UNDEFINED hasInfinite on threshold 1`] = `
{
  "daily": <td>
    100
  </td>,
  "monthly": <td>
    100
  </td>,
  "quarterly": <td>
    100
  </td>,
  "weekly": <td>
    100
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: threshold display for > 0 and hasInfinite on threshold 1`] = `
{
  "daily": <td>
    t(curiosity-graph.label_threshold, {"context":"infinite"})
  </td>,
  "monthly": <td>
    t(curiosity-graph.label_threshold, {"context":"infinite"})
  </td>,
  "quarterly": <td>
    t(curiosity-graph.label_threshold, {"context":"infinite"})
  </td>,
  "weekly": <td>
    t(curiosity-graph.label_threshold, {"context":"infinite"})
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: threshold display for null and NOT hasInfinite on threshold 1`] = `
{
  "daily": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
  "monthly": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
  "quarterly": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
  "weekly": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: threshold display for null and UNDEFINED hasInfinite on threshold 1`] = `
{
  "daily": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
  "monthly": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
  "quarterly": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
  "weekly": <td>
    t(curiosity-graph.label, {"context":"noData"})
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: threshold display for null and hasInfinite on threshold 1`] = `
{
  "daily": <td>
    t(curiosity-graph.label_threshold, {"context":"infinite"})
  </td>,
  "monthly": <td>
    t(curiosity-graph.label_threshold, {"context":"infinite"})
  </td>,
  "quarterly": <td>
    t(curiosity-graph.label_threshold, {"context":"infinite"})
  </td>,
  "weekly": <td>
    t(curiosity-graph.label_threshold, {"context":"infinite"})
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: threshold display for zero and NOT hasInfinite on threshold 1`] = `
{
  "daily": <td>
    0
  </td>,
  "monthly": <td>
    0
  </td>,
  "quarterly": <td>
    0
  </td>,
  "weekly": <td>
    0
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: threshold display for zero and UNDEFINED hasInfinite on threshold 1`] = `
{
  "daily": <td>
    0
  </td>,
  "monthly": <td>
    0
  </td>,
  "quarterly": <td>
    0
  </td>,
  "weekly": <td>
    0
  </td>,
}
`;

exports[`GraphCardChartTooltip Component should return a formatted tooltip based on data and granularity: threshold display for zero and hasInfinite on threshold 1`] = `
{
  "daily": <td>
    t(curiosity-graph.label_threshold, {"context":"infinite"})
  </td>,
  "monthly": <td>
    t(curiosity-graph.label_threshold, {"context":"infinite"})
  </td>,
  "quarterly": <td>
    t(curiosity-graph.label_threshold, {"context":"infinite"})
  </td>,
  "weekly": <td>
    t(curiosity-graph.label_threshold, {"context":"infinite"})
  </td>,
}
`;
